hydroflow/tests/compile-fail/surface_partition_port_inconsistent.rs
use hydroflow::hydroflow_syntax;

fn main() {
    let mut df = hydroflow_syntax! {
        my_partition = source_iter(0..10) -> partition(|item, [evens, _0]| {
            if 0 == item % 2 {
                evens
            }
            else {
                _0
            }
        });
        my_partition[evens] -> for_each(std::mem::drop);
        my_partition[0] -> for_each(std::mem::drop);
    };
    df.run_available();
}
